# HKUAstar_Radar_Station_2024

./: .gitignore  README.md  capture.sh  compile.sh  launch.sh  video.sh
src/: CMakeLists.txt
src/hikrobot-stereo-camera-driver/: CMakeLists.txt  README.md
src/hikrobot-stereo-camera-driver/config/: camera.yaml  reid.ini  tracker.ini
src/hikrobot-stereo-camera-driver/include/: TrtEngine.hpp  cuda_preprocess.hpp  hikrobot_camera.hpp  shared.hpp
src/hikrobot-stereo-camera-driver/include/BoTSORT/: BoTSORT.h  DataType.h  track.h  utils.h
src/hikrobot-stereo-camera-driver/include/BoTSORT/TRT_InferenceEngine/: TensorRT_InferenceEngine.h
src/hikrobot-stereo-camera-driver/launch/: hikrobot_camera.launch  hikrobot_camera_image.launch  hikrobot_camera_video.launch
src/hikrobot-stereo-camera-driver/rviz_config/: hikrobot.rviz  radar_rviz.rviz
src/hikrobot-stereo-camera-driver/src/: TrtEngine.cpp  hikrobot_camera.cpp  hikrobot_camera_debug.cpp  hikrobot_camera_image_write.cpp  testModule.py
src/hikrobot-stereo-camera-driver/src/BoTSORT/: BoTSORT.cpp  track.cpp
src/hikrobot-stereo-camera-driver/src/BoTSORT/TRT_InferenceEngine/: TensorRT_InferenceEngine.cpp
src/hikrobot-stereo-camera-driver/src/cuda/: cuda_preprocess.cu
src/livox_ros_driver/livox_ros_driver/config/: display_lidar_points.rviz
src/livox_ros_driver/livox_ros_driver/launch/: livox_lidar.launch  livox_lidar_rviz.launch
src/livox_ros_driver/livox_ros_driver/livox_ros_driver/: livox_ros_driver.cpp
src/radar_stationRM2024/: README.md
src/radar_stationRM2024/communicator_pkg/: CMakeLists.txt  package.xml
src/radar_stationRM2024/communicator_pkg/include/: DJIcrcHelper.hpp  SerialPort.hpp  communicator.hpp  data_structures.hpp
src/radar_stationRM2024/communicator_pkg/src/: checkEndian.c  communicator.cpp  communicator_main.cpp  communicator_main.py  receiver.cpp  sender.cpp  ser_api.py  serialTest.cpp
src/radar_stationRM2024/custom_msgs/: CMakeLists.txt  package.xml
src/radar_stationRM2024/custom_msgs/launch/: calibration.launch  launcher.launch  launcher_nocom.launch  model_test.launch  test.launch
src/radar_stationRM2024/custom_msgs/msg/: SendData.msg  dis_point.msg  dis_points.msg  game_state.msg  points.msg  referee_warning.msg  yolo_point.msg
src/radar_stationRM2024/custom_msgs/yaml/: config.yaml
src/radar_stationRM2024/distance_pkg/: CMakeLists.txt  package.xml
src/radar_stationRM2024/distance_pkg/src/: distance.cpp
src/radar_stationRM2024/gui_pkg/: CMakeLists.txt  package.xml
src/radar_stationRM2024/gui_pkg/include/gui_pkg/: MouseEvent.h  Painter.h  main_window.hpp  qnode.hpp
src/radar_stationRM2024/gui_pkg/src/: MouseEvent.cpp  Painter.cpp  main.cpp  main_window.cpp  qnode.cpp
src/radar_stationRM2024/gui_pkg/ui/: MainWindow.ui
src/radar_stationRM2024/gui_pkg/yaml/: guiConfig.yaml
src/radar_stationRM2024/uimap_pkg/: CMakeLists.txt  package.xml
src/radar_stationRM2024/uimap_pkg/src/: uimap.cpp
src/radar_stationRM2024/visualize_pkg/: CMakeLists.txt  package.xml
src/radar_stationRM2024/visualize_pkg/src/: visualize.cpp
