<?xml version="1.0"?>
<package format="2">
  <name>gui_pkg</name>
  <version>0.0.0</version>
  <description>The gui_pkg package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="heinz03huang@gmail.com">HeinzHuang</maintainer>
  <license>TODO</license>
  
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>custom_msgs</build_depend>
  <exec_depend>custom_msgs</exec_depend>
  <exec_depend>qt_build</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>libqt4-dev</exec_depend>
  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>image_transport</build_depend>
  <exec_depend>image_transport</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
